# DAT300

./: .gitignore  README.md
sketch/: export_data.go  go.mod  go.sum  kary.go  main.go  sketch.go  tests.md  uberfile.go
sketch/change/: change.go
sketch/datastream/: datastream.go  synthetic_data.go
sketch/forecasting/: ewma.go  forecasting.go  vel_acc.go
sketch/main/: datastream.go
sketch/sketch/: sketch.go
sketches.02b/sketches/: Makefile.in  README  configure  configure.ac
sketches.02b/sketches/regressiontest/: AMS.cc  BloomFilter.cc  CountingBloomFilter.cc  CountingSample.cc  FM.cc  FastAMS.cc  LossyCounting.cc  Makefile.am  Makefile.in  MultiBloomFilter.cc  MultiCountingBloomFilter.cc  QuantileDigest.cc
sketches.02b/sketches/src/: AMS.cc  BloomFilter.cc  CountMinFM.cc  CountingBloomFilter.cc  CountingSample.cc  FM.cc  FastAMS.cc  LossyCounting.cc  Makefile.am  Makefile.in  MultiBloomFilter.cc  MultiCountingBloomFilter.cc  QuantileDigest.cc  QuantileDigestFM.cc
