## Makefile.am -- Process this file with automake to produce Makefile.in
noinst_PROGRAMS = LossyCounting BloomFilter MultiBloomFilter CountingBloomFilter MultiCountingBloomFilter FM AMS FastAMS ReservoirSampling CountingSample QuantileDigest
INCLUDES = -I../include 
LossyCounting_SOURCES = LossyCounting.cc 
LossyCounting_LDADD = ../libsketches.la
BloomFilter_SOURCES = BloomFilter.cc 
BloomFilter_LDADD = ../libsketches.la
MultiBloomFilter_SOURCES = MultiBloomFilter.cc 
MultiBloomFilter_LDADD = ../libsketches.la
CountingBloomFilter_SOURCES = CountingBloomFilter.cc 
CountingBloomFilter_LDADD = ../libsketches.la
MultiCountingBloomFilter_SOURCES = MultiCountingBloomFilter.cc 
MultiCountingBloomFilter_LDADD = ../libsketches.la
FM_SOURCES = FM.cc 
FM_LDADD = ../libsketches.la
AMS_SOURCES = AMS.cc 
AMS_LDADD = ../libsketches.la
FastAMS_SOURCES = FastAMS.cc 
FastAMS_LDADD = ../libsketches.la
ReservoirSampling_SOURCES = ReservoirSampling.cc 
ReservoirSampling_LDADD = ../libsketches.la
CountingSample_SOURCES = CountingSample.cc 
CountingSample_LDADD = ../libsketches.la
QuantileDigest_SOURCES = QuantileDigest.cc 
QuantileDigest_LDADD = ../libsketches.la
