## Makefile.am -- Process this file with automake to produce Makefile.in
noinst_LTLIBRARIES = liblibrary.la
INCLUDES = -I../include 
liblibrary_la_SOURCES = LossyCounting.cc BloomFilter.cc MultiBloomFilter.cc CountingBloomFilter.cc MultiCountingBloomFilter.cc FM.cc AMS.cc FastAMS.cc ReservoirSampling.cc CountingSample.cc QuantileDigest.cc CountMinFM.cc QuantileDigestFM.cc
